:wrench: fix: remove `overflow-hidden` from ripple to prevent missing ripple effect on Safari

--- a/src/ripple.css
+++ b/src/ripple.css
@@ -23,7 +23,7 @@
 .salty-ripple .salty-ripple-surface {
     inset: 0;
     pointer-events: none;
-    overflow: hidden;
+    /*overflow: hidden;*/
     border-radius: inherit;
 }
 
